# miditrackpad

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  release.yml
miditrackpad/: __main__.py  midi.py  multitouch.py  types.py
