[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miditrackpad"
version = "0.1.0"
description = "Use the Force Touch on a MacBook trackpad as a MIDI CC controller."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Joshua Thompson-Lindley" }]
dependencies = [
	"click>=8.1",
	"mido[ports-rtmidi]>=1.3",
]

[project.optional-dependencies]
dev = [
	"ruff==0.14.10",
	"mypy==1.19.1",
	"isort==7.0.0",
]

[project.scripts]
miditrackpad = "miditrackpad.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["miditrackpad*"]

[[tool.mypy.overrides]]
module = ["mido", "mido.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.isort]
profile = "black"
line_length = 120
